--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "liaob88devlog",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "liaob88devlog",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "",
   "dependencies": {
     "gatsby": "^2.24.26",
     "gatsby-image": "^2.4.14",
