--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "liaob88devlog",
+  "name": "liaob88blog",
   "private": true,
-  "description": "liaob88devlog",
+  "description": "liaob88blog",
   "version": "0.1.0",
   "author": "",
   "dependencies": {
