--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.1.0",
+    "ts-node": "^9.1.1",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
