--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "typescript": "^3.9.7"
   },
   "devDependencies": {
+    "husky": "^5.1.2",
     "prettier": "2.0.5"
   },
   "keywords": [
@@ -44,7 +45,8 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
