--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "gatsby-plugin-sharp": "^2.6.24",
     "gatsby-plugin-styled-components": "^3.10.0",
     "gatsby-remark-images": "^3.11.0",
+    "gatsby-remark-prismjs": "^4.0.0",
     "gatsby-source-filesystem": "^2.3.23",
     "gatsby-transformer-remark": "^2.8.28",
     "gatsby-transformer-sharp": "^2.5.12",
+    "prismjs": "^1.23.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
