--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@fortawesome/react-fontawesome": "0.1.15",
     "@types/styled-components": "5.1.13",
     "babel-plugin-styled-components": "1.13.2",
-    "gatsby": "2.24.26",
+    "gatsby": "^3.12.1",
     "gatsby-image": "2.4.14",
     "gatsby-plugin-google-gtag": "2.8.0",
     "gatsby-plugin-graphql-codegen": "2.7.3",
