--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "gatsby-plugin-graphql-codegen": "2.7.3",
     "gatsby-plugin-manifest": "^3.13.0",
     "gatsby-plugin-offline": "^4.13.0",
-    "gatsby-plugin-react-helmet": "3.3.10",
+    "gatsby-plugin-react-helmet": "^4.13.0",
     "gatsby-plugin-sharp": "2.6.24",
     "gatsby-plugin-styled-components": "3.10.0",
     "gatsby-remark-images": "3.11.0",
