--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "gatsby-plugin-manifest": "^3.13.0",
     "gatsby-plugin-offline": "^4.13.0",
     "gatsby-plugin-react-helmet": "^4.13.0",
-    "gatsby-plugin-sharp": "2.6.24",
+    "gatsby-plugin-sharp": "^3.13.0",
     "gatsby-plugin-styled-components": "3.10.0",
     "gatsby-remark-images": "3.11.0",
     "gatsby-remark-prismjs": "4.0.0",
