--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "gatsby-plugin-offline": "^4.13.0",
     "gatsby-plugin-react-helmet": "^4.13.0",
     "gatsby-plugin-sharp": "^3.13.0",
-    "gatsby-plugin-styled-components": "3.10.0",
+    "gatsby-plugin-styled-components": "^4.13.0",
     "gatsby-remark-images": "3.11.0",
     "gatsby-remark-prismjs": "4.0.0",
     "gatsby-source-filesystem": "2.3.23",
