--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "gatsby-plugin-react-helmet": "^4.13.0",
     "gatsby-plugin-sharp": "^3.13.0",
     "gatsby-plugin-styled-components": "^4.13.0",
-    "gatsby-remark-images": "3.11.0",
+    "gatsby-remark-images": "^5.10.0",
     "gatsby-remark-prismjs": "4.0.0",
     "gatsby-source-filesystem": "2.3.23",
     "gatsby-transformer-remark": "2.8.28",
