--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "gatsby-plugin-styled-components": "^4.13.0",
     "gatsby-remark-images": "^5.10.0",
     "gatsby-remark-prismjs": "^5.10.0",
-    "gatsby-source-filesystem": "2.3.23",
+    "gatsby-source-filesystem": "^3.13.0",
     "gatsby-transformer-remark": "2.8.28",
     "gatsby-transformer-sharp": "2.5.12",
     "prismjs": "1.24.1",
