--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "gatsby-transformer-sharp": "^3.13.0",
     "prismjs": "1.24.1",
     "prop-types": "15.7.2",
-    "react": "16.14.0",
+    "react": "^17.0.2",
     "react-dom": "16.14.0",
     "react-helmet": "6.1.0",
     "styled-components": "5.3.1",
