--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@fortawesome/react-fontawesome": "0.1.15",
     "@types/styled-components": "5.1.13",
     "babel-plugin-styled-components": "1.13.2",
-    "gatsby": "2.24.26",
+    "gatsby": "^3.13.0",
     "gatsby-image": "2.4.14",
     "gatsby-plugin-google-gtag": "2.8.0",
     "gatsby-plugin-graphql-codegen": "2.7.3",
@@ -24,6 +24,7 @@
     "gatsby-source-filesystem": "2.3.23",
     "gatsby-transformer-remark": "2.8.28",
     "gatsby-transformer-sharp": "2.5.12",
+    "postcss": "^8.3.6",
     "prismjs": "1.24.1",
     "prop-types": "15.7.2",
     "react": "16.14.0",
