--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@types/styled-components": "5.1.13",
     "babel-plugin-styled-components": "1.13.2",
     "gatsby": "^3.13.0",
-    "gatsby-image": "2.4.14",
+    "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-gtag": "2.8.0",
     "gatsby-plugin-graphql-codegen": "2.7.3",
     "gatsby-plugin-manifest": "2.4.21",
