update: gatsby-plugin-graphql-codegen 2.7.3 -> ^3.0.0 - npm install gatsby-plugin-graphql-codegen@latest --legacy-peer-deps

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "gatsby": "^3.13.0",
     "gatsby-image": "^3.11.0",
     "gatsby-plugin-google-gtag": "^3.12.0",
-    "gatsby-plugin-graphql-codegen": "2.7.3",
+    "gatsby-plugin-graphql-codegen": "^3.0.0",
     "gatsby-plugin-manifest": "^3.13.0",
     "gatsby-plugin-offline": "^4.13.0",
     "gatsby-plugin-react-helmet": "^4.13.0",
