--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "gatsby-remark-images": "^5.10.0",
     "gatsby-remark-prismjs": "^5.10.0",
     "gatsby-source-filesystem": "^3.13.0",
-    "gatsby-transformer-remark": "2.8.28",
+    "gatsby-transformer-remark": "^4.10.0",
     "gatsby-transformer-sharp": "2.5.12",
     "postcss": "^8.3.6",
     "prismjs": "1.24.1",
