--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "gatsby-remark-prismjs": "^5.10.0",
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-transformer-remark": "^4.10.0",
-    "gatsby-transformer-sharp": "2.5.12",
+    "gatsby-transformer-sharp": "^3.13.0",
     "postcss": "^8.3.6",
     "prismjs": "1.24.1",
     "prop-types": "15.7.2",
