--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
   "devDependencies": {
     "husky": "7.0.2",
     "lint-staged": "11.1.2",
-    "prettier": "2.3.2"
+    "prettier": "2.3.2",
+    "textlint": "^12.0.2",
+    "textlint-rule-prh": "^5.3.0"
   },
   "keywords": [
     "gatsby"
@@ -61,6 +63,7 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx,json,md}": "prettier --write"
+    "*.{js,jsx,ts,tsx,json,md}": "prettier --write",
+    "*.md": "npx textlint --cache --fix"
   }
 }
