--- a/package.json
+++ b/package.json
@@ -7,39 +7,39 @@
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "1.2.36",
     "@fortawesome/free-solid-svg-icons": "5.15.4",
-    "@fortawesome/react-fontawesome": "0.1.16",
-    "@types/styled-components": "5.1.14",
+    "@fortawesome/react-fontawesome": "0.2.0",
+    "@types/styled-components": "5.1.26",
     "babel-plugin-styled-components": "1.13.3",
-    "cloudinary": "1.27.1",
-    "gatsby": "3.14.6",
+    "cloudinary": "1.37.0",
+    "gatsby": "^3.15.0",
     "gatsby-image": "3.11.0",
-    "gatsby-plugin-google-gtag": "3.14.0",
-    "gatsby-plugin-graphql-codegen": "3.1.0",
-    "gatsby-plugin-manifest": "3.14.0",
-    "gatsby-plugin-offline": "4.14.0",
-    "gatsby-plugin-react-helmet": "4.14.0",
-    "gatsby-plugin-sharp": "3.14.3",
-    "gatsby-plugin-styled-components": "4.14.0",
-    "gatsby-remark-images": "5.11.0",
-    "gatsby-remark-prismjs": "5.11.0",
-    "gatsby-source-filesystem": "3.14.0",
-    "gatsby-transformer-remark": "4.11.0",
-    "gatsby-transformer-sharp": "3.14.0",
-    "postcss": "8.3.6",
-    "prismjs": "1.27.0",
-    "prop-types": "15.7.2",
+    "gatsby-plugin-google-gtag": "3.15.0",
+    "gatsby-plugin-graphql-codegen": "3.1.1",
+    "gatsby-plugin-manifest": "3.15.0",
+    "gatsby-plugin-offline": "4.15.0",
+    "gatsby-plugin-react-helmet": "4.15.0",
+    "gatsby-plugin-sharp": "3.15.0",
+    "gatsby-plugin-styled-components": "4.15.0",
+    "gatsby-remark-images": "5.12.0",
+    "gatsby-remark-prismjs": "5.12.0",
+    "gatsby-source-filesystem": "3.15.0",
+    "gatsby-transformer-remark": "4.12.0",
+    "gatsby-transformer-sharp": "3.15.0",
+    "postcss": "8.4.24",
+    "prismjs": "1.29.0",
+    "prop-types": "15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-helmet": "6.1.0",
-    "styled-components": "5.3.1",
-    "ts-node": "10.8.1",
-    "typescript": "4.7.4"
+    "styled-components": "5.3.11",
+    "ts-node": "10.9.1",
+    "typescript": "4.9.5"
   },
   "devDependencies": {
     "husky": "7.0.4",
-    "lint-staged": "11.1.2",
-    "prettier": "2.4.1",
-    "textlint": "12.0.2",
+    "lint-staged": "11.2.6",
+    "prettier": "2.8.8",
+    "textlint": "12.6.1",
     "textlint-rule-prh": "5.3.0"
   },
   "keywords": [
@@ -47,8 +47,8 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
+    "build": "NODE_OPTIONS='--openssl-legacy-provider' gatsby build",
+    "develop": "NODE_OPTIONS='--openssl-legacy-provider' gatsby develop",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
